--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^23.3.1",
     "@types/node": "^10.5.5",
+    "jest": "^23.4.1",
     "nodemon": "^1.18.3",
     "ts-jest": "^23.0.1",
     "ts-node": "^7.0.1",
