--- a/package.json
+++ b/package.json
@@ -20,5 +20,7 @@
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "crypto-js": "^3.1.9-1"
+  }
 }
