--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,6 @@
             "*": ["node_modules/*", "src/types/*"]
         }
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "jest.config.js"],
     "exclude": ["node_modules", "**/*.spec.ts"]
 }
