--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.5",
     "jest": "^23.4.1",
-    "nodemon": "^1.18.3",
+    "nodemon": "^1.18.7",
     "ts-jest": "^23.0.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.0.1"
   },
   "dependencies": {
-    "crypto-js": "^3.1.9-1"
+    "@trust/webcrypto": "^0.9.2",
+    "crypto-js": "^3.1.9-1",
+    "fast-text-encoding": "^1.0.0"
   }
 }
